--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Frontend Developer - Dante Esprit</title> 
     <script type="text/javascript"  src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="https://twemoji.maxcdn.com/2/svg/1f4bd.svg" type="image/png">
   </head> 
   <body> 
     <script type="text/javascript" src="script.js"> 
