--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
     <title>Frontend Developer - Dante Esprit</title> 
     <script type="text/javascript"  src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script> 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" href="https://twemoji.maxcdn.com/2/svg/1f4bd.svg" type="image/png">
+    <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/285/sparkles_2728.png" type="image/png">
   </head> 
   <body> 
     <script type="text/javascript" src="script.js"> 
     </script> 
     <div id="console"></div> 
-    <script type="text/javascript", src="index2.js">
-    </script>
   </body> 
 </html>
